[gd_scene load_steps=8 format=3 uid="uid://dslfhaacylysr"]

[ext_resource type="Script" path="res://shoppe_scene.gd" id="1_5juds"]
[ext_resource type="Texture2D" uid="uid://dvqojbbqiuei6" path="res://art/YeOldeShoppe.png" id="1_wl6mu"]
[ext_resource type="Texture2D" uid="uid://1j3mukxivt08" path="res://art/heart.png" id="2_rhnqj"]
[ext_resource type="Texture2D" uid="uid://bjlhf4crtterx" path="res://art/SwordIcon.png" id="3_b6u0b"]
[ext_resource type="FontFile" uid="uid://bscrgmx88wnpd" path="res://fonts/SHPinscher-Regular.otf" id="4_0o8qx"]
[ext_resource type="AudioStream" uid="uid://b2tosce0tmfkk" path="res://art/336474__faulkin__coinsslide_02.wav" id="6_ossfv"]
[ext_resource type="AudioStream" uid="uid://c57kf5g1lt6as" path="res://art/Airship Serenity.mp3" id="7_fghhv"]

[node name="ShoppeScene" type="Node"]
script = ExtResource("1_5juds")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ShopSprite" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(540, 360)
scale = Vector2(4, 4)
texture = ExtResource("1_wl6mu")

[node name="HeartSprite" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(180, 192)
scale = Vector2(4, 4)
texture = ExtResource("2_rhnqj")

[node name="SwordSprite" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(360, 200)
scale = Vector2(4, 4)
texture = ExtResource("3_b6u0b")

[node name="HeartHaveLabel" type="Label" parent="CanvasLayer"]
offset_left = 115.0
offset_top = 100.0
offset_right = 245.0
offset_bottom = 142.0
theme_override_colors/font_color = Color(0.921569, 0.87451, 0.258824, 1)
theme_override_fonts/font = ExtResource("4_0o8qx")
theme_override_font_sizes/font_size = 32
text = "You have: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SwordHaveLabel" type="Label" parent="CanvasLayer"]
offset_left = 295.0
offset_top = 100.0
offset_right = 425.0
offset_bottom = 142.0
theme_override_colors/font_color = Color(0.921569, 0.87451, 0.258824, 1)
theme_override_fonts/font = ExtResource("4_0o8qx")
theme_override_font_sizes/font_size = 32
text = "You have: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeartCostLabel" type="Label" parent="CanvasLayer"]
offset_left = 160.0
offset_top = 260.0
offset_right = 200.0
offset_bottom = 322.0
theme_override_colors/font_color = Color(0.921569, 0.87451, 0.258824, 1)
theme_override_fonts/font = ExtResource("4_0o8qx")
theme_override_font_sizes/font_size = 48
text = "$5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SwordCostLabel" type="Label" parent="CanvasLayer"]
offset_left = 340.0
offset_top = 260.0
offset_right = 380.0
offset_bottom = 322.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.921569, 0.87451, 0.258824, 1)
theme_override_fonts/font = ExtResource("4_0o8qx")
theme_override_font_sizes/font_size = 48
text = "$5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="CanvasLayer"]
offset_left = 170.0
offset_top = 510.0
offset_right = 370.0
offset_bottom = 596.0
theme_override_colors/font_color = Color(0.921569, 0.87451, 0.258824, 1)
theme_override_fonts/font = ExtResource("4_0o8qx")
theme_override_font_sizes/font_size = 64
text = "Continue"

[node name="HeartBuyButton" type="Button" parent="CanvasLayer"]
offset_left = 120.0
offset_top = 330.0
offset_right = 240.0
offset_bottom = 416.0
theme_override_colors/font_color = Color(0.921569, 0.87451, 0.258824, 1)
theme_override_fonts/font = ExtResource("4_0o8qx")
theme_override_font_sizes/font_size = 64
text = "Buy"

[node name="SwordBuyButton" type="Button" parent="CanvasLayer"]
offset_left = 300.0
offset_top = 330.0
offset_right = 420.0
offset_bottom = 416.0
theme_override_colors/font_color = Color(0.921569, 0.87451, 0.258824, 1)
theme_override_fonts/font = ExtResource("4_0o8qx")
theme_override_font_sizes/font_size = 64
text = "Buy"

[node name="MoneyLabel" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 630.0
offset_right = 235.0
offset_bottom = 692.0
theme_override_colors/font_color = Color(0.921569, 0.87451, 0.258824, 1)
theme_override_fonts/font = ExtResource("4_0o8qx")
theme_override_font_sizes/font_size = 48
text = "You have: $0"
vertical_alignment = 2

[node name="buySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ossfv")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_fghhv")
volume_db = -8.0
pitch_scale = 0.9
autoplay = true
